# arduinounittesting

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  CMakeSettings.old  README.md
include/: SPI.h
include/avr/: dtoa_conv.h  dtostrf.h  eeprom.h  ftoa_engine.h  readme.txt
include/gos/utils/: binding.h  debug.h  expect.h  memory.h  order.h  random.h  statistics.h  wordq.h
include/mock/: ModbusSlave.h  U8g2lib.h  WAString.h
scripts/: pull.bat
src/: CMakeLists.txt  execute.cpp
src/avr-libc/: CMakeLists.txt
src/avr-libc/libc/stdlib/: dtoa_prf.cc  dtostrf.cc  ftoa_engine.cc
src/mock/: CMakeLists.txt  ModbusSlave.cpp  SPI.cpp  U8g2lib.cpp  WAString.cpp
src/mock/avr/: CMakeLists.txt  eeprom.cpp
src/utils/: CMakeLists.txt  expect.cpp  memory.cpp  order.cpp  wordq.cpp
sublibraries/: CMakeLists.txt
tests/: CMakeLists.txt  arduinotemplates.cpp  execute.cpp  fixedpoints.cpp  format.cpp  max31865.cpp  max6675.cpp  median.cpp  sensor.cpp  sort.cpp
tests/gatl/: avrage.cpp  binding.cpp  buffer.cpp  crc.cpp  display.cpp  eeprom.cpp  format.cpp  led.cpp  logo.h  median.cpp  modbus.cpp  pid.cpp  pid2.cpp  sensor.cpp  sort.cpp  string.cpp  type.cpp  utility.cpp
